# ChangeLog for www-client/opera-next
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera-next/ChangeLog,v 1.10 2011/05/30 00:03:23 jer Exp $

*opera-next-11.50.1024 (30 May 2011)

  30 May 2011; Jeroen Roovers <jer@gentoo.org> +opera-next-11.50.1024.ebuild:
  http://my.opera.com/desktopteam/blog/2011/05/29/sunday-special

*opera-next-11.50.1020 (28 May 2011)

  28 May 2011; Jeroen Roovers <jer@gentoo.org> +opera-next-11.50.1020.ebuild:
  http://my.opera.com/desktopteam/blog/2011/05/27/a-second-build-to-celebrate-f
  riday

*opera-next-11.50.1018 (27 May 2011)

  27 May 2011; Jeroen Roovers <jer@gentoo.org> +opera-next-11.50.1018.ebuild:
  http://my.opera.com/desktopteam/blog/2011/05/27/fixes-and-improvements-on-dem
  and-plug-in-sitepref-ctrl-click-support

*opera-next-11.50.1016 (25 May 2011)

  25 May 2011; Jeroen Roovers <jer@gentoo.org> +opera-next-11.50.1016.ebuild:
  http://my.opera.com/desktopteam/blog/2011/05/25/slashing-bugs

  25 May 2011; Jeroen Roovers <jer@gentoo.org> opera-next-11.50.1009.ebuild,
  opera-next-11.50.1015.ebuild:
  Remove unneeded RESTRICT="test".

*opera-next-11.50.1015 (23 May 2011)

  23 May 2011; Jeroen Roovers <jer@gentoo.org> +opera-next-11.50.1015.ebuild:
  http://my.opera.com/desktopteam/blog/2011/05/23/next-passwordsync-plugininsta
  llation

  20 May 2011; Jeroen Roovers <jer@gentoo.org> opera-next-11.50.1009.ebuild:
  Die when we try to remove unknown linguas.

  16 May 2011; Jeroen Roovers <jer@gentoo.org> opera-next-11.50.1009.ebuild:
  Fix desktop file references, from "opera" to "opera-next", by Ja Bi.

  03 May 2011; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Fix line length.

*opera-next-11.50.1009 (03 May 2011)

  03 May 2011; Jeroen Roovers <jer@gentoo.org> +opera-next-11.50.1009.ebuild,
  +metadata.xml:
  Initial commit
  <http://my.opera.com/desktopteam/blog/swordfish-and-opera-next>.
