@@ -19,18 +19,22 @@ DIST opera-next-11.50-1020.x86_64.linux.tar.xz 11549828 RMD160 7ea7fe78dc6356daa
 DIST opera-next-11.50-1024.i386.freebsd.tar.xz 10873068 RMD160 f7cd1552d483c2c053f2817404834f251cc3f0b6 SHA1 dac3ae62bf742abe0c59560bb867f1e38a41a8fb SHA256 6a8da8f6dbf971f4db8a789137d29810f345ee2f379e9a3807b9b64c2f060d7b
 DIST opera-next-11.50-1024.i386.linux.tar.xz 10832924 RMD160 6edea2c279eb39630ecf46feace6d2dee85d07eb SHA1 dc9c4142be0c1519119cb1de2c2bc5527b1f9b41 SHA256 6862b8e59940ab49b4edba47f86e9cc8aeb9afe52fb5e0c47bddac665cd6d44d
 DIST opera-next-11.50-1024.x86_64.linux.tar.xz 11593188 RMD160 7ec1210632b8f87a9961c19b19f817b7047b23e8 SHA1 ecd3a52b07de9886cfd52a8c03b6d0b0b8d0332d SHA256 2cef8ce514a9f8d453f5b9cc5ef04606a2f78612c91114873e2e5a86deea78a0
+DIST opera-next-11.50-1027.i386.freebsd.tar.xz 10887748 RMD160 c1f431042130da059ebedcc8c699c06fc3b61689 SHA1 e59006bd92d0c04752e5c882bb9a9c2d93a101c3 SHA256 7c34a404a22eaf6a5f13cd076201d47957945422dd5ea6bb1526df919db545da
+DIST opera-next-11.50-1027.i386.linux.tar.xz 10833208 RMD160 ef7457f064c2505ea13058f25183ef0a187135f4 SHA1 8410141898006e57f6942e62bc91fe062754d6b5 SHA256 3cbef29f6ddc4c437bf0df75e654fb5266d562586c8361dad380e1d83226b7a4
+DIST opera-next-11.50-1027.x86_64.linux.tar.xz 11607112 RMD160 a077c23ea09282f3842aa451fe92e92e495327c5 SHA1 a02bb554adc5d11e83b0955d6cba4445998603ef SHA256 f9f8ca5edc63e61487911f39a7dfdd7c39ccbcb6c765adbb59e2878812831e62
 EBUILD opera-next-11.50.1009.ebuild 5938 RMD160 88b7c94fb996540e5a211fcf2ce278ac2dff6cc8 SHA1 e8b73ada5b8ce747ef697229b6cca2b3d67052d8 SHA256 68106e4e0a47620e1ca868822efcc9ae717cc6663fb30a9e830662fa1ebee498
 EBUILD opera-next-11.50.1015.ebuild 5946 RMD160 8da970b0a9d46985bb7ec456b3f327d2bef98f77 SHA1 1c7c770600862cd83f8b80837b857314c4f5390c SHA256 97cddad9846cf6e75202a619c0072df215f46d4d5b403c7af0ad8ff4c66d5964
 EBUILD opera-next-11.50.1016.ebuild 5947 RMD160 fa066a659b2b0d2fdbb9afb8dda8742f3717ce44 SHA1 6fee78bed4ca2a75d12fa9c3386fa8fadc083d7e SHA256 22708e79fa8c6b392b7919253a6f2a31a8a468c6a9277dd81672c668bede3035
 EBUILD opera-next-11.50.1018.ebuild 5947 RMD160 9f701fe6ab3ed60130e7def745797c266235ab07 SHA1 e9aa82b9bb6f82c69648a8a57b1409b18e685957 SHA256 245988907de1c57265b93d423910d8ff1074f2276a26f0789a5cf11e0ae207b8
 EBUILD opera-next-11.50.1020.ebuild 5948 RMD160 22668f9b0653e83abcd68cf3acfcc23fd5da1b9d SHA1 1fd9b9ee7f6ed7ecd0da11dc924af5ab38c1855a SHA256 922531e1c03fd86f7d181166fb2d92b8be4529fb3c79a568a502db4bb7ce1ff2
 EBUILD opera-next-11.50.1024.ebuild 5947 RMD160 bff8ceee7ad636ebf9e5197b655541d0d1dee3dd SHA1 c63c6cf33b385f988192925c3408bed910c9eb34 SHA256 3cc5c1737154a07c4dbc9fab3390b9cc7f5e9d52b91f8d83bff84b2c8f1ad526
-MISC ChangeLog 1943 RMD160 70132b697a813fb74bf7c862b39d3e58cb68dca9 SHA1 dd10cf7d01cdb5963423ca8e99c8b49f61e95ddb SHA256 807297ad9fb557688fc135e8ed1386d60a0ad0042d1f64155fb5292ded70bca9
+EBUILD opera-next-11.50.1027.ebuild 5943 RMD160 04d0766ed358b9474509752a62a35017b540beab SHA1 f90e8be59d0395595035a15dcd0313aff0dfbf14 SHA256 ae2b681e716c055a7ac4e1031d9fad9b75b85e6dbfe034c4ccd3be2e8fd4ec8d
+MISC ChangeLog 2139 RMD160 50a216c3e1c759fa5760993845f09632ad195cd6 SHA1 4909f480d3a3ea398b4dbbc4a161b3dec6e87b23 SHA256 9b06b95f31141caec7aafb21f2a15ef0c5b1f01b00c79ecdd6663f8a96b4730f
 MISC metadata.xml 1547 RMD160 465d146bcfdb6553f7f0ab2dddd68c4dcb2e7731 SHA1 1afb7e0ccc0833ba0eb73be38b282b66ad629ff6 SHA256 5cfc6e7cbf3c454d563eb407b4569f0f5a9b3ce7770026d6055f27211d481915
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk3i3tUACgkQVWmRsqeSphPYgQCfcNMGmtt/Pbmy39sNB2Ps8eOC
-EtIAn2btWlMnK3MceidjX/lqFerWUG5C
-=bWwk
+iEYEARECAAYFAk3j6+oACgkQVWmRsqeSphP0EwCdES59XTpNrYjOPqCtlL8cGkHl
+MAgAni5rvis9ILZA94Hu4kkamoMK2nhp
+=w5O5
 -----END PGP SIGNATURE-----
