@@ -1,6 +1,11 @@
 # ChangeLog for www-client/opera-next
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera-next/ChangeLog,v 1.10 2011/05/30 00:03:23 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera-next/ChangeLog,v 1.11 2011/05/30 19:11:04 jer Exp $
+
+*opera-next-11.50.1027 (30 May 2011)
+
+  30 May 2011; Jeroen Roovers <jer@gentoo.org> +opera-next-11.50.1027.ebuild:
+  http://my.opera.com/desktopteam/blog/2011/05/30/fixed-some-annoying-crashers
 
 *opera-next-11.50.1024 (30 May 2011)
 
